<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Invoice Maker</string>

    <!--  TODO: if you want to remove ads then wrote "false" otherwise "true"  -->
    <bool name="isAdAvailable">false</bool>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admobBanner">/6499/example/banner</string>
    <string name="admobNative">/6499/example/native</string>
    <string name="admobInterstitial">/6499/example/interstitial</string>
    <string name="admobAppOpen">/6499/example/app-open</string>


    <string name="moreapp">Smart Edoo</string>

    <string name="search_hint">search</string>

    <string name="account_data">ACCOUNT DATA</string>
    <string name="account_text">Account</string>
    <string name="action_sign_in_short">Register</string>
    <string name="add_item">Add Item</string>
    <string name="all_text">ALL</string>


    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="backup">Backup</string>


    <string name="btn_back">&lt;&lt; Back</string>
    <string name="btn_change">Change</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_send">Send</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="business_details">Business details</string>
    <string name="business_info_message">Business name, details, logo</string>
    <string name="business_text">BUSINESS</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_text">Cancel</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="change_pin">Change PIN</string>
    <string name="change_pin_message">PIN may only be changed when the PIN lock feature is ON</string>

    <string name="choose_logo">Select a Logo</string>
    <string name="clients_text">Clients</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="closed_estimate_message">Quotations that have been converted to an invoice will show up here</string>
    <string name="closed_text">CLOSED</string>

    <string name="currency_name_text">Currency</string>
    <string name="currency_value_text">KES (Kes)</string>
    <string name="date_name_text">Date format</string>
    <string name="date_value_text">----/--/--</string>
    <string name="default_note_text">Default notes</string>
    <string name="default_to_paid">Default to paid</string>
    <string name="default_to_paid_message">This will set all your newly created invoices as Fully Paid</string>
    <string name="delete_logo">Delete Logo</string>
    <string name="delete_text">Delete</string>
    <string name="discard_changes_message">Are you sure you want to go back? Any data entered will be lost!</string>
    <string name="due_on_receipt">Due on receipt</string>
    <string name="edit_client">Edit client</string>
    <string name="edit_invoice_text">EDIT</string>
    <string name="edit_item">Edit Item</string>
    <string name="email">Email</string>
    <string name="email_app_text">Email app</string>
    <string name="estimates_text">Quotations</string>
    <string name="export">Export</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_password">Password</string>

    <string name="invoice_history_text">HISTORY</string>
    <string name="invoice_info">Invoice Info</string>
    <string name="invoice_not_found">No invoices found!</string>
    <string name="invoice_opened_text">Invoice opened</string>
    <string name="invoice_send_failed">Failed to deliver invoice</string>
    <string name="invoice_text">INVOICE</string>
    <string name="invoices_text">Invoices</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="locale">LOCALE</string>
    <string name="logo_text">Logo</string>
    <string name="make_invoice_text">Make Invoice</string>
    <string name="mark_paid_text">Mark paid</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="my_items">Items</string>
    <string name="name_address_text">Name, address &amp; reg number</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="new_pass">New Password</string>
    <string name="no_client_message">You can create new clients here or import from your contacts.</string>
    <string name="no_estimate_message">Show clients the costs by making an quotation, later you can convert it to an invoice</string>
    <string name="no_invoice_message">Your invoices will show up here. Click the plus button below to create your first invoice!</string>
    <string name="no_item_message">Here you can manage a list of products or services that you repeatedly invoice for.</string>
    <string name="notification_text">NOTIFICATIONS</string>
    <string name="openDrawer">open_drawer</string>
    <string name="open_estimate_message">"Quotations that haven't been converted to an invoice will show up here"</string>
    <string name="open_in">Open in...</string>
    <string name="open_text">OPEN</string>
    <string name="others">OTHERS</string>
    <string name="outstanding_text">UNPAID</string>
    <string name="paid_invoice_message">Invoices that you mark paid will show up here.</string>
    <string name="paid_text">PAID</string>

    <string name="payment_options">Payment options (Bank transfer, PayPal, etc)</string>
    <string name="paypal_error_message">Please enter a valid email for PayPal</string>
    <string name="permission_camera">you need camera permission</string>
    <string name="permission_storage">you need storage permission</string>
    <string name="phone_email_text">Phone, email &amp; website</string>
    <string name="photo_additional_dtls">Additional details</string>
    <string name="photo_desc">Description</string>
    <string name="pin_lock">Pin Lock</string>
    <string name="print_text">Print</string>
    <string name="privacy_security">PRIVACY AND SECURITY</string>
    <string name="quantity_amount_message">Show Quantity, Rate &amp; Amount columns on the invoice</string>
    <string name="quantity_amount_text">Toggle quantity &amp; amount</string>
    <string name="remove_user">Remove user</string>
    <string name="rename_field_text">Rename fields</string>
    <string name="report_invoice_text">Refresh</string>
    <string name="reports_text">Reports</string>
    <string name="reset">Reset</string>
    <string name="restore">Restore</string>

    <string name="save">SAVE</string>
    <string name="save_client_text">Save</string>

    <string name="send_me_copy_text">Send me a copy</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="send_text">SEND</string>
    <string name="settings_text">Settings</string>
    <string name="share_text">Share</string>
    <string name="sms_app_text">SMS app</string>

    <string name="support_text">Support</string>
    <string name="tax_text">Taxes</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="unpaid_invoice_message">Invoices that are not yet paid show up here.</string>
    <string name="rateus">Rate us</string>
    <string name="more">More app (Ad)</string>


</resources>
