<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_grey"
            android:fontFamily="@font/nexa_regular"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_5"
            android:paddingBottom="@dimen/margin_5"
            android:text="@string/business_text"
            android:textColor="@color/notice_white" />

        <TextView
            android:id="@+id/insert_logo_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_regular"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_15"
            android:paddingBottom="@dimen/margin_15"
            android:text="@string/logo_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/transparent_grey" />

        <TextView
            android:id="@+id/name_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_regular"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_15"
            android:paddingBottom="@dimen/margin_15"
            android:text="@string/name_address_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/transparent_grey" />

        <TextView
            android:id="@+id/phone_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_regular"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_15"
            android:paddingBottom="@dimen/margin_15"
            android:text="@string/phone_email_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_grey"
            android:fontFamily="@font/nexa_regular"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_5"
            android:paddingBottom="@dimen/margin_5"
            android:text="@string/invoice_text"
            android:textColor="@color/notice_white" />

        <TextView
            android:id="@+id/tax"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_regular"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_15"
            android:paddingBottom="@dimen/margin_15"
            android:text="@string/tax_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/transparent_grey" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/nexa_regular"
                android:text="@string/default_to_paid"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <Switch
                android:id="@+id/default_to_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/default_to_paid"
                android:fontFamily="@font/nexa_regular"
                android:paddingTop="@dimen/margin_5"
                android:text="@string/default_to_paid_message"
                android:textSize="@dimen/margin_12" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/transparent_grey" />

        <TextView
            android:id="@+id/default_notes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_regular"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_15"
            android:paddingBottom="@dimen/margin_15"
            android:text="@string/default_note_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/transparent_grey" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/nexa_regular"
                android:text="@string/quantity_amount_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <Switch
                android:id="@+id/quantity_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quantity_amount"
                android:fontFamily="@font/nexa_regular"
                android:paddingTop="@dimen/margin_5"
                android:text="@string/quantity_amount_message"
                android:textSize="@dimen/text_size_12" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/transparent_grey" />

        <TextView
            android:id="@+id/rename_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_15"
            android:paddingBottom="@dimen/margin_15"
            android:text="@string/rename_field_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_grey"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_5"
            android:paddingBottom="@dimen/margin_5"
            android:text="@string/send_text"
            android:textColor="@color/notice_white" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_5"
            android:paddingRight="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/send_me_copy_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/transparent_grey" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_15"
            android:paddingBottom="@dimen/margin_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/sms_app_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_10"
                android:text="Skype"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/transparent_grey" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_15"
            android:paddingBottom="@dimen/margin_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/email_app_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_10"
                android:text="Invoice Simple"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_grey"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_5"
            android:paddingBottom="@dimen/margin_5"
            android:text="@string/notification_text"
            android:textColor="@color/notice_white" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_5"
            android:paddingRight="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/invoice_opened_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/transparent_grey" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_5"
            android:paddingRight="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/invoice_send_failed"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>